--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/SindhuPaw/guestbook#readme",
   "dependencies": {
+    "@vercel/kv": "^3.0.0",
     "express": "^5.1.0"
   }
 }
